Expanded tests to more Mock Repos, corrected functionality of some repos